--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
-server.port=8080
-# springit.welcome-msg=
+logging.level.com.vega.springit=DEBUG
 
+# server.port=8080
+springit.welcome-msg=Hello, Springit!       
+spring.profiles.active=production,dev
+
+info.application.name=Springit
+info.application.description=Reddit clone using Spring Boot 2
+info.application.version=0.0.1
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
